--- a/installer.ui
+++ b/installer.ui
@@ -115,6 +115,9 @@
       <property name="text">
        <string>All</string>
       </property>
+      <property name="checked">
+       <bool>true</bool>
+      </property>
      </widget>
     </item>
    </layout>
