--- a/installer.ui
+++ b/installer.ui
@@ -47,13 +47,6 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="0">
-     <widget class="QLabel" name="directoryToInstallInLabel">
-      <property name="text">
-       <string>Directory to install in:</string>
-      </property>
-     </widget>
-    </item>
     <item row="2" column="0">
      <widget class="QCheckBox" name="allCheckBox">
       <property name="text">
@@ -61,23 +54,6 @@
       </property>
       <property name="checked">
        <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="1">
-     <widget class="QLineEdit" name="directoryToInstallInLineEdit">
-      <property name="inputMethodHints">
-       <set>Qt::ImhNoPredictiveText|Qt::ImhUrlCharactersOnly</set>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="2">
-     <widget class="QPushButton" name="browseButton">
-      <property name="text">
-       <string>Browse</string>
-      </property>
-      <property name="flat">
-       <bool>false</bool>
       </property>
      </widget>
     </item>
@@ -123,10 +99,41 @@
       </column>
      </widget>
     </item>
-    <item row="5" column="0" colspan="2">
+    <item row="5" column="1">
+     <widget class="QLineEdit" name="directoryToInstallInLineEdit">
+      <property name="inputMethodHints">
+       <set>Qt::ImhNoPredictiveText|Qt::ImhUrlCharactersOnly</set>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="2">
+     <widget class="QPushButton" name="browseButton">
+      <property name="text">
+       <string>Browse</string>
+      </property>
+      <property name="flat">
+       <bool>false</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="0">
+     <widget class="QLabel" name="directoryToInstallInLabel">
+      <property name="text">
+       <string>Directory to install in:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="0">
      <widget class="QLabel" name="sizeOfSelectedMapsLabel">
       <property name="text">
        <string>Size of maps selected: {}</string>
+      </property>
+     </widget>
+    </item>
+    <item row="7" column="0" colspan="3">
+     <widget class="QLabel" name="invalidInstallDirLabel">
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ff0000;&quot;&gt;Sorry, please enter a non-existing directory for the installation directory.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </item>
