--- a/installer.ui
+++ b/installer.ui
@@ -84,17 +84,17 @@
       </row>
       <column>
        <property name="text">
-        <string>New Column</string>
+        <string>Name</string>
        </property>
       </column>
       <column>
        <property name="text">
-        <string>New Column</string>
+        <string>Version</string>
        </property>
       </column>
       <column>
        <property name="text">
-        <string>New Column</string>
+        <string>Size</string>
        </property>
       </column>
      </widget>
@@ -176,13 +176,6 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="0">
-     <widget class="QLabel" name="currentDownloadSpeedLabel">
-      <property name="text">
-       <string>Connecting...</string>
-      </property>
-     </widget>
-    </item>
     <item row="17" column="0" colspan="3">
      <widget class="QTableWidget" name="fileInfoTableWidget">
       <property name="enabled">
@@ -212,17 +205,23 @@
       <attribute name="horizontalHeaderVisible">
        <bool>false</bool>
       </attribute>
+      <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+       <bool>false</bool>
+      </attribute>
       <attribute name="verticalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="verticalHeaderShowSortIndicator" stdset="0">
        <bool>false</bool>
       </attribute>
       <row>
        <property name="text">
-        <string>temp</string>
+        <string/>
        </property>
       </row>
       <row>
        <property name="text">
-        <string>temp2</string>
+        <string/>
        </property>
       </row>
       <column>
@@ -309,6 +308,13 @@
      <widget class="QLabel" name="totalDownloadProgress">
       <property name="text">
        <string>1 GiB / 2 GiB</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0" colspan="3">
+     <widget class="QLabel" name="currentDownloadSpeedLabel">
+      <property name="text">
+       <string>Connecting...</string>
       </property>
      </widget>
     </item>
